Rondas.Pequeñas actualizaciones en el resto.